--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,110 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@import "~@angular/material/theming";
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$uscg-covid19-primary: mat-palette($mat-indigo);
+$uscg-covid19-accent: mat-palette($mat-pink, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$uscg-covid19-warn: mat-palette($mat-red);
+
+// Create the theme object (a Sass map containing all of the palettes).
+$uscg-covid19-theme: mat-light-theme(
+  $uscg-covid19-primary,
+  $uscg-covid19-accent,
+  $uscg-covid19-warn
+);
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($uscg-covid19-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+// Required
+@import "../node_modules/bootstrap/scss/functions";
+@import "../node_modules/bootstrap/scss/variables";
+@import "../node_modules/bootstrap/scss/mixins";
+
+// Optional
+@import "../node_modules/bootstrap/scss/grid";
+
+@import "styles/tabs";
+
+html,
+body {
+  margin: 0;
+  border: 0;
+  padding: 0;
+  font-family: Montserrat, "Helvetica Neue", sans-serif;
+  color: #888da8;
+  color: rgb(23, 43, 77);
+
+  font-size: 14px;
+  font-weight: 500;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.h-100 {
+  height: 100% !important;
+}
+
+.w-100 {
+  width: 100% !important;
+}
+
+.d-flex {
+  display: flex !important;
+  align-items: center;
+}
+
+.relative {
+  position: relative;
+}
+
+.loading-overlay {
+  height: 100%;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 9999;
+}
+
+body .mat-progress-bar-buffer {
+  background-color: #e6e6e6;
+}
+
+body .mat-progress-bar-fill::after {
+  background-color: #d41864;
+}
+
+body .mat-tab-group {
+  font-family: Montserrat, "Helvetica Neue", sans-serif;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.1),
+    inset 0 -1px 0 rgba(0, 0, 0, 0.07);
+}
