--- a/src/app/medicos/medicos.component.html
+++ b/src/app/medicos/medicos.component.html
@@ -18,5 +18,8 @@
         </mat-tab>
       </mat-tab-group>
     </div>
+    <div class="footer">
+      Desarrallado con <i-feather name="heart"></i-feather> por Adrián Espinoza
+    </div>
   </div>
 </div>
