--- a/src/app/medicos/profesionales/profesionales.component.html
+++ b/src/app/medicos/profesionales/profesionales.component.html
@@ -1,5 +1,13 @@
 <ng-container *ngIf="area">
   <div class="container">
+    <div class="row row-back" style="margin-top: 1.5rem;">
+      <div class="col-12">
+        <a class="back" routerLink="/medicos">
+          <i-feather name="arrow-left"></i-feather>
+          <div>Regresar</div>
+        </a>
+      </div>
+    </div>
     <div class="row">
       <div class="col-12">
         <div class="d-flex" style="margin-top: 1.5rem;">
