--- a/src/app/medicos/medicos.component.html
+++ b/src/app/medicos/medicos.component.html
@@ -17,9 +17,10 @@
           <ucsg-profesionales [area]="areaSelected"></ucsg-profesionales>
         </mat-tab>
       </mat-tab-group>
-    </div>
-    <div class="footer">
-      Desarrallado con <i-feather name="heart"></i-feather> por Adrián Espinoza
+      <div class="footer">
+        Desarrallado con <i-feather name="heart"></i-feather> por Adrián
+        Espinoza
+      </div>
     </div>
   </div>
 </div>
