--- a/src/app/medicos/medicos.component.html
+++ b/src/app/medicos/medicos.component.html
@@ -17,10 +17,9 @@
           <ucsg-profesionales [area]="areaSelected"></ucsg-profesionales>
         </mat-tab>
       </mat-tab-group>
-      <div class="footer">
-        Desarrallado con <i-feather name="heart"></i-feather> por Adrián
-        Espinoza
-      </div>
+    </div>
+    <div class="footer">
+      Desarrallado con <i-feather name="heart"></i-feather> por Adrián Espinoza
     </div>
   </div>
 </div>
