--- a/src/app/medicos/areas/areas.component.html
+++ b/src/app/medicos/areas/areas.component.html
@@ -34,4 +34,4 @@
     </div>
   </div>
 </div>
-<div class="place" style="height: 34px;"></div>
+<!-- <div class="place" style="height: 34px;"></div> -->
