--- a/src/app/medicos/header/header.component.scss
+++ b/src/app/medicos/header/header.component.scss
@@ -1,10 +1,10 @@
-.header-fix {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 999;
-}
+// .header-fix {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   z-index: 999;
+// }
 
 .header {
   display: flex;
