--- a/src/app/medicos/medicos.component.html
+++ b/src/app/medicos/medicos.component.html
@@ -32,7 +32,7 @@
           </mat-tab-group>
         </div>
         <div class="footer">
-          Desarrallado con <i-feather name="heart"></i-feather> por Adrián
+          Desarrallodo con <i-feather name="heart"></i-feather> por Adrián
           Espinoza
         </div>
       </div>
