--- a/src/app/medicos/areas/areas.component.html
+++ b/src/app/medicos/areas/areas.component.html
@@ -30,6 +30,12 @@
         <div class="area-name">
           {{ area.name }}
         </div>
+        <span
+          class="area-atendiendo"
+          [class.disabled]="area.medicosAtendiendo == 0"
+        >
+          {{ area.medicosAtendiendo }} atendiendo
+        </span>
       </div>
     </div>
   </div>
