--- a/src/app/medicos/areas/areas.component.html
+++ b/src/app/medicos/areas/areas.component.html
@@ -2,16 +2,13 @@
   <div class="row info-row">
     <div class="col-12">
       <div class="info-box">
-        <div class="info">Acerca de este servicio:</div>
+        <div class="info">About this service:</div>
         <p>
-          Nos enfrentamos a una situación compleja, muy difícil y estamos
-          seguros de que las dudas que se te presentan son muchas.
+          This web app is part of my web portfolio. You can see it <a>here</a>
           <br />
           <br />
-          Es tiempo de cuidar nuestra salud y la de todos los que nos rodean,
-          por eso te ofrecemos la posibilidad de comunicarte con un equipo de
-          profesionales en el área de la salud, ellos podrán satisfacer tus
-          dudas e inquietudes.
+          All the data here is fake, was created just for show as a demo :).
+          Have a good day.
         </p>
       </div>
     </div>
