--- a/src/app/medicos/areas/areas.component.html
+++ b/src/app/medicos/areas/areas.component.html
@@ -4,7 +4,8 @@
       <div class="info-box">
         <div class="info">About this service:</div>
         <p>
-          This web app is part of my web portfolio. You can see it <a>here</a>
+          This web app is part of my web portfolio. You can see it
+          <a href="https://adrianespi.now.sh/">here</a>
           <br />
           <br />
           All the data here is fake, was created just for show as a demo :).
